src/index.css
/* fonts */
@import url('https://fonts.cdnfonts.com/css/agustina');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
/* tailwindcss v2.2.16 */
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    scroll-behavior: smooth;
}

/* custom fonts */
.font-logo {
    font-family: 'Agustina', sans-serif;
}

.font-main {
    font-family: "Montserrat", serif;
}

/* background color */
.bg-portDark {
    background-color: #171c28
}

/* theme */
.style-dark {
    background-color: #171c28;
    color: #fff;
}

/* problem solving cards box shadow */
.problem-solving-card {
    box-shadow: 0 10px 30px -15px #aba9af;
    transition: all .25s ease;
}
.problem-solving-card:hover{
    box-shadow: 0 10px 30px 0px #aba9af;
}
.header-z-index {
    z-index: 1000;
}

